recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: identifier expected but ')' found.
  	avance(100.)
                   ^